templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driver-dashboard-service
  labels:
    app: f1-platform
    component: dash
spec:
  type: NodePort
  selector:
    app: driver-dashboard-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5005
      name: http
